# cerberus

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  start.sh
benches/: benchmarks.rs  message_reporting.rs  run_benchmarks.sh  token_creation.rs
benches/results/message_reporting/3-2/base/: estimates.json  tukey.json
benches/results/message_reporting/3-2/new/: benchmark.json  sample.json
benches/results/message_reporting/5-3/base/: benchmark.json
benches/results/message_reporting/5-3/new/: estimates.json  sample.json  tukey.json
benches/results/message_reporting/7-4/base/: sample.json
benches/results/message_reporting/7-4/new/: benchmark.json  estimates.json  tukey.json
benches/results/token_creation/3-2-1/base/: benchmark.json  estimates.json  tukey.json
benches/results/token_creation/3-2-1/new/: sample.json
benches/results/token_creation/3-2-10/base/: estimates.json  sample.json  tukey.json
benches/results/token_creation/3-2-10/new/: benchmark.json
benches/results/token_creation/3-2-100/base/: sample.json
benches/results/token_creation/3-2-100/new/: benchmark.json  estimates.json  tukey.json
benches/results/token_creation/3-2-1000/base/: estimates.json  sample.json
benches/results/token_creation/3-2-1000/new/: benchmark.json  tukey.json
benches/results/token_creation/3-2-200/base/: benchmark.json  tukey.json
benches/results/token_creation/3-2-200/new/: estimates.json  sample.json
benches/results/token_creation/3-2-50/base/: benchmark.json  estimates.json  sample.json  tukey.json
benches/results/token_creation/3-2-500/base/: sample.json
benches/results/token_creation/3-2-500/new/: benchmark.json  estimates.json  tukey.json
benches/results/token_creation/3-2-750/base/: benchmark.json
benches/results/token_creation/3-2-750/new/: estimates.json  sample.json  tukey.json
benches/results/token_creation/5-3-1/base/: sample.json
benches/results/token_creation/5-3-1/new/: benchmark.json  estimates.json  tukey.json
benches/results/token_creation/5-3-10/new/: benchmark.json  estimates.json  sample.json  tukey.json
benches/results/token_creation/5-3-100/base/: benchmark.json  estimates.json  tukey.json
benches/results/token_creation/5-3-100/new/: sample.json
benches/results/token_creation/5-3-1000/base/: benchmark.json  tukey.json
benches/results/token_creation/5-3-1000/new/: estimates.json  sample.json
benches/results/token_creation/5-3-200/base/: sample.json
examples/: dry_run.rs  frost.rs  frost_serialization.rs
poster/: ali-poster.cls  message-flow-diagram.tex  poster.tex
src/: communication.rs  coordinator.rs  crypto.rs  elgamal.rs  lib.rs  moderator.rs  parameters.rs  shamir.rs  structs.rs  token.rs
src/roles/: coordinator.rs  mod.rs  moderator.rs
writeup/: benchmark-analysis.r  benchmark-plot.tex  diagram.tex  figures.r  main.tex  sources.bib
writeup/sections/: cerberus.tex  implementation.tex  intro.tex
(+47 files in other folders)
