[package]
name = "cerberus"
version = "0.1.0"
edition = "2021"
authors = ["Alistair Pattison <patti041@umn.edu, pattisona@carleton.edu>"]


[dependencies]
# async 
# TODO remove unnecessary tokio features
tokio = "1.22.0"
futures = "0.3.25"

# serialization
serde = { version = "1.0.148", features = ["derive"] }
serde_arrays = "0.1.0"
bincode = "1.3.3"

# parameters
konst = "0.3.4"
load-dotenv = "0.1.2"

# http
reqwest = { version = "0.11.13", default-features = false }
tiny_http = "0.12.0"

# crypto
curve25519-dalek = { version = "4.0.0-pre.1", features = ["serde"] }
curve25519-dalek-ml = "4.0.0"
vsss-rs = { version = "2.1.0", features = ["std"] }
sha2 = "0.10.6"
rand = "0.8.5"
# TODO submit PR to FROST with serialization improvements
frost-ristretto255 = { git = "https://github.com/alipatti/frost", branch = "add-serde" }
frost-core = { git = "https://github.com/alipatti/frost", branch = "add-serde" }

# misc
array-init = "2.1.0"
