[package]
name = "cerberus"
version = "0.1.0"
edition = "2021"
authors = ["Alistair Pattison <patti041@umn.edu, pattisona@carleton.edu>"]


[[bench]]
name = "token_creation"
harness = false


[dependencies]
# async 
tokio = { version = "1.22.0", features = ["macros", "rt"] }
futures = "0.3.25"

# serialization
serde = { version = "1.0.148", features = ["derive"] }
serde_arrays = "0.1.0"
bincode = "1.3.3"

# parameters
konst = "0.3.4"
load-dotenv = "0.1.2"

# http
reqwest = "0.11.13"
tiny_http = "0.12.0"

# crypto
curve25519-dalek = { version = "4.0.0-pre.4", features = ["serde"] }
curve25519-dalek-ml = "4.0.0"
vsss-rs = { version = "2.1.0", features = ["std"] }
sha2 = "0.10.6"
rand = "0.8.5"
# TODO submit PR to FROST with serialization improvements
frost-core = { git = "http://github.com/alipatti/frost", branch = "add-serde" }
frost-ristretto255 = { git = "http://github.com/alipatti/frost", branch = "add-serde" }

# misc
array-init = "2.1.0"
criterion = { version = "0.4.0", features = ["async", "tokio", "async_tokio"] }
