[package]
name = "cerberus"
version = "0.1.0"
edition = "2021"
authors = ["Alistair Pattison <patti041@umn.edu, pattisona@carleton.edu>"]

[dependencies]
# async 
tokio = { version = "1.22.0", features = ["macros", "rt"] }
futures = "0.3.25"

# serialization
serde = { version = "1.0.148", features = ["derive"] }
bincode = "1.3.3"

# http
reqwest = "0.11.13"
tiny_http = "0.12.0"

# crypto
curve25519-dalek = { version = "4.0.0-pre.4", features = ["serde"] }
sha2 = "0.10.6"
rand = "0.8.5"
# TODO: submit PR to FROST with serialization improvements
frost-core = { git = "http://github.com/alipatti/frost", branch = "add-serde" }
frost-ristretto255 = { git = "http://github.com/alipatti/frost", branch = "add-serde" }

# benchmarking
criterion = { version = "0.4.0", features = ["async", "tokio", "async_tokio"] }

chrono = "0.4.24" # for timestamps
